// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots widgets/Loader circular 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="MuiGrid-root Loader-root-104 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader custom 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="MuiGrid-root Loader-root-349 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "color": "#9c27b0",
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={18.5}
            strokeWidth={7}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader linear 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="MuiGrid-root Loader-root-222 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary Loader-linear-224 MuiLinearProgress-indeterminate"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
          style={Object {}}
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorPrimary"
          style={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiDrawer-root MuiDrawer-docked"
      >
        <div
          className="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
          style={
            Object {
              "visibility": undefined,
            }
          }
        >
          <nav
            className="MuiList-root SideMenu-root-508 Component-flexed-507 MuiList-padding"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-509"
            />
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-510 MuiListItem-gutters SideMenu-listItemGutters-511 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-513"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-512 MuiTypography-body1"
                >
                  Dashboard
                </span>
              </div>
            </div>
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-510 MuiListItem-gutters SideMenu-listItemGutters-511 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-513"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-512 MuiTypography-body1"
                >
                  Employees
                </span>
              </div>
            </div>
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-510 MuiListItem-gutters SideMenu-listItemGutters-511 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-513"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-512 MuiTypography-body1"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu mini selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiDrawer-root MuiDrawer-docked"
      >
        <div
          className="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
          style={
            Object {
              "visibility": undefined,
            }
          }
        >
          <nav
            className="MuiList-root SideMenu-root-954 Component-flexed-953 MuiList-padding"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 80,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-955"
            />
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-activeItem-962 MuiListItem-gutters SideMenu-listItemGutters-957 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-959 SideMenu-listItemHidden-960"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-958 MuiTypography-body1"
                >
                  Dashboard
                </span>
              </div>
            </div>
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-956 MuiListItem-gutters SideMenu-listItemGutters-957 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-959 SideMenu-listItemHidden-960"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-958 MuiTypography-body1"
                >
                  Employees
                </span>
              </div>
            </div>
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-956 MuiListItem-gutters SideMenu-listItemGutters-957 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-959 SideMenu-listItemHidden-960"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-958 MuiTypography-body1"
                >
                  Theme
                </span>
              </div>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiDrawer-root MuiDrawer-docked"
      >
        <div
          className="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
          style={
            Object {
              "visibility": undefined,
            }
          }
        >
          <nav
            className="MuiList-root SideMenu-root-731 Component-flexed-730 MuiList-padding"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-732"
            />
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-activeItem-739 MuiListItem-gutters SideMenu-listItemGutters-734 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-736"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-735 MuiTypography-body1"
                >
                  Dashboard
                </span>
              </div>
            </div>
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-733 MuiListItem-gutters SideMenu-listItemGutters-734 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-736"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-735 MuiTypography-body1"
                >
                  Employees
                </span>
              </div>
            </div>
            <div
              aria-disabled={false}
              className="MuiButtonBase-root MuiListItem-root SideMenu-listItem-733 MuiListItem-gutters SideMenu-listItemGutters-734 MuiListItem-button"
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="MuiListItemIcon-root"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root SideMenu-listItemText-736"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary SideMenu-listItemPrimary-735 MuiTypography-body1"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-1982 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiGrid-root Widget-container-1983 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-1984 MuiGrid-container MuiGrid-item"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) custom height 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-2660 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiGrid-root Widget-container-2661 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Custom content height
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-2662 Component-content-2657 MuiGrid-container MuiGrid-item"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-2150 Widget-featured-2156 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiGrid-root Widget-container-2151 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-2152 MuiGrid-container MuiGrid-item"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) squared 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-2489 MuiPaper-elevation2"
        >
          <div
            className="MuiGrid-root Widget-container-2490 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                I have no rounded borders
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-2491 MuiGrid-container MuiGrid-item"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-2321 Widget-border-2324 Widget-border-top-2325 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-2322 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-2323 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-2321 Widget-border-2324 Widget-border-bottom-2326 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-2322 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-2323 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-2321 Widget-border-2324 Component-customTopBorder-2319 Widget-border-top-2325 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-2322 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-2323 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-2321 Widget-border-2324 Component-customBotomBorder-2320 Widget-border-bottom-2326 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-2322 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-2323 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-1136 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiGrid-root Widget-container-1137 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-1138 MuiGrid-container MuiGrid-item"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget custom height 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-1814 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiGrid-root Widget-container-1815 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Custom content height
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-1816 Component-content-1811 MuiGrid-container MuiGrid-item"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-1304 Widget-featured-1310 MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiGrid-root Widget-container-1305 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-1306 MuiGrid-container MuiGrid-item"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget squared 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root Widget-root-1643 MuiPaper-elevation2"
        >
          <div
            className="MuiGrid-root Widget-container-1644 MuiGrid-container MuiGrid-direction-xs-column"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                I have no rounded borders
              </h6>
            </div>
            <div
              className="MuiGrid-root Widget-content-1645 MuiGrid-container MuiGrid-item"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-1475 Widget-border-1478 Widget-border-top-1479 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-1476 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-1477 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-1475 Widget-border-1478 Widget-border-bottom-1480 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-1476 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-1477 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-1475 Widget-border-1478 Component-customTopBorder-1473 Widget-border-top-1479 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-1476 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-1477 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
          >
            <div
              className="MuiPaper-root Widget-root-1475 Widget-border-1478 Component-customBotomBorder-1474 Widget-border-bottom-1480 MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                className="MuiGrid-root Widget-container-1476 MuiGrid-container MuiGrid-direction-xs-column"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-root Widget-content-1477 MuiGrid-container MuiGrid-item"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
